--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         data-chapter-title="cooking"
         data-filepath="README.md"
         data-basepath="."
-        data-revision="Tue May 03 2016 16:37:26 GMT+0800 (CST)"
+        data-revision="Wed May 04 2016 11:25:45 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -393,6 +393,7 @@
 </ul>
 </li>
 </ul>
+<p><em>*cooking &#x53EA;&#x80FD;&#x4F7F;&#x7528; NPM 3 &#x53CA;&#x5176;&#x4EE5;&#x4E0A;&#x7684;&#x7248;&#x672C;&#x5B89;&#x88C5;</em></p>
 
                     
                     </section>
