--- a/quickstart.html
+++ b/quickstart.html
@@ -53,7 +53,7 @@
         data-chapter-title="快速上手"
         data-filepath="quickstart.md"
         data-basepath="."
-        data-revision="Tue May 03 2016 16:37:26 GMT+0800 (CST)"
+        data-revision="Wed May 04 2016 11:25:45 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -374,7 +374,7 @@
 </ul>
 <!-- toc stop -->
 <h1 id="&#x5168;&#x5C40;&#x5B89;&#x88C5;">&#x5168;&#x5C40;&#x5B89;&#x88C5;</h1>
-<p>&#x63A8;&#x8350;&#x4F7F;&#x7528; NPM 3 &#x53CA;&#x4EE5;&#x4E0A;&#xFF0C;&#x636E;&#x8BF4;&#x6548;&#x7387;&#x4F1A;&#x66F4;&#x9AD8;&#x4E00;&#x4E9B;&#x3002;</p>
+<p><strong>&#x53EA;&#x80FD;&#x4F7F;&#x7528; NPM 3 &#x53CA;&#x5176;&#x4EE5;&#x4E0A;&#x7684;&#x7248;&#x672C;</strong></p>
 <pre><code class="lang-bash">$ npm i cooking -g
 </code></pre>
 <p>&#x5982;&#x679C;&#x56FD;&#x5185;&#x901F;&#x5EA6;&#x6162;&#x7684;&#x8BDD;&#x53EF;&#x4EE5;&#x9009;&#x62E9;&#x4F7F;&#x7528;&#x56FD;&#x5185;&#x955C;&#x50CF;&#xFF0C;&#x4F8B;&#x5982; taobao &#x955C;&#x50CF;</p>
