--- a/cli.html
+++ b/cli.html
@@ -53,7 +53,7 @@
         data-chapter-title="CLI"
         data-filepath="cli.md"
         data-basepath="."
-        data-revision="Thu May 12 2016 18:35:49 GMT+0800 (CST)"
+        data-revision="Thu May 12 2016 21:45:45 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -468,6 +468,9 @@ $ cooking init vue
 <p>&#x9ED8;&#x8BA4;&#x8BFB;&#x53D6; <code>cooking.conf.js</code> &#x914D;&#x7F6E;&#x4E5F;&#x6307;&#x5B9A;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
 <pre><code class="lang-bash">$ cooking watch -c webpack.config.js
 </code></pre>
+<p>&#x63A5;&#x53D7;&#x4F20;&#x5165;&#x6587;&#x4EF6;&#x6570;&#x7EC4;&#xFF0C;&#x7528;&#x9017;&#x53F7;&#x5206;&#x9694;</p>
+<pre><code class="lang-bash">$ cooking watch -c cooking.desktop.js,cooking.mobile.js
+</code></pre>
 <h3 id="build"><code>build</code></h3>
 <p>&#x751F;&#x4EA7;&#x6A21;&#x5F0F;&#xFF0C;&#x751F;&#x6210;&#x6700;&#x7EC8;&#x7684;&#x90E8;&#x7F72;&#x4EE3;&#x7801;</p>
 <pre><code class="lang-bash">$ cooking build
@@ -477,6 +480,9 @@ $ cooking init vue
 </ul>
 <p>&#x9ED8;&#x8BA4;&#x8BFB;&#x53D6; <code>cooking.conf.js</code> &#x914D;&#x7F6E;&#x4E5F;&#x6307;&#x5B9A;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
 <pre><code class="lang-bash">$ cooking build -c webpack.config.js
+</code></pre>
+<p>&#x63A5;&#x53D7;&#x4F20;&#x5165;&#x6587;&#x4EF6;&#x6570;&#x7EC4;&#xFF0C;&#x7528;&#x9017;&#x53F7;&#x5206;&#x9694;</p>
+<pre><code class="lang-bash">$ cooking watch -c cooking.desktop.js,cooking.mobile.js
 </code></pre>
 <ul>
 <li>-p --progress</li>
