--- a/configuration.html
+++ b/configuration.html
@@ -53,7 +53,7 @@
         data-chapter-title="配置参数"
         data-filepath="configuration.md"
         data-basepath="."
-        data-revision="Fri May 13 2016 11:32:55 GMT+0800 (CST)"
+        data-revision="Fri May 13 2016 13:49:11 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -628,6 +628,8 @@
   }
 }
 </code></pre>
+<p>&#x652F;&#x6301;&#x6307;&#x5B9A;&#x63D2;&#x4EF6;&#x7684;&#x7248;&#x672C;
+extends: [&apos;vue@0.1.4&apos;]</p>
 <hr>
 <blockquote id="fn_1">
 <sup>1</sup>. &#x591A;&#x6570;&#x60C5;&#x51B5;&#x4E0B;&#x6211;&#x4EEC;&#x4F1A;&#x6307;&#x5B9A;&#x4E00;&#x4E2A;&#x76EE;&#x5F55;&#x4F8B;&#x5982;<code>fe.project</code>&#x4E3A;&#x90E8;&#x7F72;&#x76EE;&#x5F55;&#xFF0C;&#x8F93;&#x51FA;&#x6587;&#x4EF6;&#x4F1A;&#x62F7;&#x8D1D;&#x5230;&#x8BE5;&#x76EE;&#x5F55;&#x4E0B;&#x3002;&#x5982;&#x679C;&#x90E8;&#x7F72; <code>fe.project</code> &#x76EE;&#x5F55;&#xFF0C;&#x57DF;&#x540D;&#x6307;&#x5411; <code>fs.project/dist/index.html</code> &#x6587;&#x4EF6;&#xFF0C;&#x90A3;&#x4E48; <code>app.js</code> &#x76F8;&#x5BF9;&#x4E8E;&#x57DF;&#x540D;&#x7684;&#x8DEF;&#x5F84;&#x5C31;&#x53D8;&#x6210;&#x4E86; <code>/dist/app.js</code>&#xFF0C;&#x6240;&#x4EE5;&#x914D;&#x7F6E; <strong>publicPath</strong> &#x7684;&#x4F5C;&#x7528;&#x5C31;&#x5728;&#x4E8E;&#x6B64;&#x3002;&#x540C;&#x65F6;&#x4E5F;&#x53EF;&#x4EE5;&#x628A;&#x5B83;&#x914D;&#x5236;&#x6210;&#x4E00;&#x4E2A; CDN &#x8DEF;&#x5F84;&#x3002;&#x5982;&#x679C;&#x6211;&#x4EEC;&#x628A; <code>dist</code> &#x5F53;&#x4F5C;&#x90E8;&#x7F72;&#x76EE;&#x5F55;&#xFF0C;&#x57DF;&#x540D;&#x6307;&#x5411; <code>dist/index.html</code> &#x6587;&#x4EF6;&#xFF0C;&#x90A3;&#x4E48; <code>app.js</code> &#x7684;&#x8DEF;&#x5F84;&#x5C31;&#x662F; <code>/app.js</code> &#x5C31;&#x628A; publicPath &#x8BBE;&#x7F6E;&#x6210; <code>/</code> &#x5373;&#x53EF;&#x3002;<a href="#reffn_1" title="Jump back to footnote [1] in the text."> &#x21A9;</a>
