--- a/create-a-generator.html
+++ b/create-a-generator.html
@@ -53,7 +53,7 @@
         data-chapter-title="如何写脚手架"
         data-filepath="create-a-generator.md"
         data-basepath="."
-        data-revision="Mon May 16 2016 13:48:18 GMT+0800 (CST)"
+        data-revision="Thu May 19 2016 14:00:32 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -400,7 +400,7 @@
                     <section class="normal" id="section-">
                     
                         <h1 id="&#x5982;&#x4F55;&#x5199;&#x811A;&#x624B;&#x67B6;">&#x5982;&#x4F55;&#x5199;&#x811A;&#x624B;&#x67B6;</h1>
-<p>&#x5185;&#x7F6E;&#x7684;&#x811A;&#x624B;&#x67B6;&#x5DE5;&#x5177;&#x662F; <a href="https://github.com/slushjs/slush" target="_blank">slush</a>&#xFF0C;&#x76F8;&#x6BD4; <a href="http://yeoman.io/authoring/index.html" target="_blank">yoman</a> &#x66F4;&#x8F7B;&#x91CF;&#x7EA7;&#x4E14;&#x5199;&#x8D77;&#x6765;&#x4E5F;&#x4F1A;&#x5F88;&#x719F;&#x6089;&#xFF08;&#x7528; Gulp &#x5199;&#x811A;&#x624B;&#x67B6;<sup><a href="#fn_1" id="reffn_1">1</a></sup>&#xFF09;&#x3002;</p>
+<p>&#x5185;&#x7F6E;&#x7684;&#x811A;&#x624B;&#x67B6;&#x5DE5;&#x5177;&#x662F; <a href="https://github.com/slushjs/slush" target="_blank">slush</a>&#xFF0C;&#x76F8;&#x6BD4; <a href="http://yeoman.io/authoring/index.html" target="_blank">yeoman</a> &#x66F4;&#x8F7B;&#x91CF;&#x7EA7;&#x4E14;&#x5199;&#x8D77;&#x6765;&#x4E5F;&#x4F1A;&#x5F88;&#x719F;&#x6089;&#xFF08;&#x7528; Gulp &#x5199;&#x811A;&#x624B;&#x67B6;<sup><a href="#fn_1" id="reffn_1">1</a></sup>&#xFF09;&#x3002;</p>
 <p>&#x65E0;&#x8BBA;&#x4F60;&#x4F1A;&#x4E0D;&#x4F1A;&#x7528; Gulp&#xFF0C;&#x53EF;&#x4EE5;&#x76F4;&#x63A5;&#x901A;&#x8FC7;&#x63D0;&#x4F9B;&#x7684;&#x811A;&#x624B;&#x67B6;&#x751F;&#x6210;&#x4E00;&#x4E2A;&#x811A;&#x624B;&#x67B6;&#xFF0C;&#x57FA;&#x672C;&#x4E0A;&#x6539;&#x6539;&#x914D;&#x7F6E;&#x5C31;&#x80FD;&#x5199;&#x5B8C;&#x4E00;&#x4E2A;&#x811A;&#x624B;&#x67B6;</p>
 <pre><code class="lang-bash">$ cooking init generator
 </code></pre>
