--- a/cli.html
+++ b/cli.html
@@ -57,7 +57,7 @@
         data-chapter-title="CLI"
         data-filepath="cli.md"
         data-basepath="."
-        data-revision="Fri May 20 2016 00:20:12 GMT+0800 (CST)"
+        data-revision="Wed Jun 01 2016 21:38:47 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -496,6 +496,12 @@ $ cooking init vue
 <li>--no-color</li>
 </ul>
 <p>&#x63A7;&#x5236;&#x53F0;&#x8F93;&#x51FA;&#x4FE1;&#x606F;&#x4E0D;&#x663E;&#x793A;&#x989C;&#x8272;&#x3002;</p>
+<ul>
+<li>--output-public-path</li>
+</ul>
+<p>&#x8BBE;&#x7F6E; publicPath&#xFF0C;&#x4F1A;&#x8986;&#x76D6;&#x914D;&#x7F6E;&#x6587;&#x4EF6;&#x4E2D;&#x7684; publicPath</p>
+<pre><code class="lang-shell">cooking build --output-public-path xxx.cdn.com/
+</code></pre>
 <h2 id="&#x63D2;&#x4EF6;">&#x63D2;&#x4EF6;</h2>
 <h3 id="import"><code>import</code></h3>
 <p>&#x5B89;&#x88C5;&#x63D2;&#x4EF6;<sup><a href="#fn_1" id="reffn_1">1</a></sup>&#x3001;&#x6307;&#x4EE4;&#x3001;&#x811A;&#x624B;&#x67B6;</p>
