--- a/list-of-generators.html
+++ b/list-of-generators.html
@@ -57,7 +57,7 @@
         data-chapter-title="脚手架"
         data-filepath="list-of-generators.md"
         data-basepath="."
-        data-revision="Fri Jun 10 2016 22:36:51 GMT+0800 (CST)"
+        data-revision="Thu Jun 16 2016 22:10:56 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -355,6 +355,7 @@
 <h2 id="&#x9879;&#x76EE;&#x7C7B;">&#x9879;&#x76EE;&#x7C7B;</h2>
 <ul>
 <li><a href="https://github.com/cookingjs/slush-cooking-vue" target="_blank">vue</a> - &#x57FA;&#x7840;&#x7684; vue &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
+<li><a href="https://github.com/cookingjs/slush-cooking-vue2" target="_blank">vue2</a> - &#x57FA;&#x7840;&#x7684; vue2.0 &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
 <li><a href="https://github.com/cookingjs/slush-cooking-react" target="_blank">react</a> - &#x57FA;&#x7840;&#x7684; react &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
 <li><a href="https://github.com/cookingjs/slush-cooking-static" target="_blank">static</a> - &#x57FA;&#x7840;&#x9875;&#x9762;&#x9879;&#x76EE;</li>
 </ul>
