--- a/list-of-generators.html
+++ b/list-of-generators.html
@@ -57,7 +57,7 @@
         data-chapter-title="脚手架"
         data-filepath="list-of-generators.md"
         data-basepath="."
-        data-revision="Sun Aug 14 2016 10:54:49 GMT+0800 (CST)"
+        data-revision="Tue Aug 16 2016 22:15:45 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -382,6 +382,10 @@
                     <section class="normal" id="section-">
                     
                         <h1 id="&#x811A;&#x624B;&#x67B6;">&#x811A;&#x624B;&#x67B6;</h1>
+<p>&#x5347;&#x7EA7;&#x811A;&#x624B;&#x67B6;&#x7684;&#x65B9;&#x5F0F;&#x662F;&#x5148;&#x8981;&#x5378;&#x8F7D;&#x6389;&#x539F;&#x6709;&#x7684;&#xFF0C;&#x518D;&#x5B89;&#x88C5;&#x65B0;&#x7684;</p>
+<pre><code class="lang-shell">cooking remove vue -t
+cooking import vue -t
+</code></pre>
 <h2 id="&#x9879;&#x76EE;&#x7C7B;">&#x9879;&#x76EE;&#x7C7B;</h2>
 <ul>
 <li><a href="https://github.com/cookingjs/slush-cooking-vue" target="_blank">vue</a> - &#x57FA;&#x7840;&#x7684; vue &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
