--- a/list-of-plugins.html
+++ b/list-of-plugins.html
@@ -57,7 +57,7 @@
         data-chapter-title="插件"
         data-filepath="list-of-plugins.md"
         data-basepath="."
-        data-revision="Sun Aug 14 2016 10:54:49 GMT+0800 (CST)"
+        data-revision="Tue Aug 16 2016 22:15:45 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -382,6 +382,10 @@
                     <section class="normal" id="section-">
                     
                         <h1 id="&#x63D2;&#x4EF6;">&#x63D2;&#x4EF6;</h1>
+<p>&#x5347;&#x7EA7;&#x63D2;&#x4EF6;&#x7684;&#x65B9;&#x5F0F;</p>
+<pre><code class="lang-shell">cooking remove vue
+cooking import vue
+</code></pre>
 <p>&#x901A;&#x8FC7; <a href="configuration.html#extends">extends</a> &#x6211;&#x4EEC;&#x53EF;&#x4EE5;&#x5F15;&#x5165;&#x989D;&#x5916;&#x7684;&#x914D;&#x7F6E;&#x548C;&#x4F9D;&#x8D56;&#xFF0C;&#x76EE;&#x524D;&#x63D0;&#x4F9B;&#x7684;&#x63D2;&#x4EF6;&#x6709;&#xFF1A;</p>
 <ul>
 <li><a href="https://github.com/cookingjs/cooking-vue" target="_blank">vue</a> - &#x63D0;&#x4F9B; vue &#x76F8;&#x5173;&#x914D;&#x7F6E;</li>
