--- a/zh-cn/list-of-generators.html
+++ b/zh-cn/list-of-generators.html
@@ -65,7 +65,7 @@
         data-chapter-title="脚手架"
         data-filepath="list-of-generators.md"
         data-basepath="."
-        data-revision="Tue Sep 06 2016 17:06:48 GMT+0800 (CST)"
+        data-revision="Sun Sep 11 2016 17:02:30 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -381,8 +381,7 @@ cooking import vue -t
 </code></pre>
 <h2 id="&#x9879;&#x76EE;&#x7C7B;">&#x9879;&#x76EE;&#x7C7B;</h2>
 <ul>
-<li><a href="https://github.com/cookingjs/slush-cooking-vue" target="_blank">vue</a> - &#x57FA;&#x7840;&#x7684; vue &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
-<li><a href="https://github.com/cookingjs/slush-cooking-vue2" target="_blank">vue2</a> - &#x57FA;&#x7840;&#x7684; vue2.0 &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
+<li><a href="https://github.com/cookingjs/slush-cooking-vue" target="_blank">vue</a> - &#x57FA;&#x7840;&#x7684; vue &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;&#xFF0C;&#x652F;&#x6301; Vue 1 &#x548C; 2</li>
 <li><a href="https://github.com/cookingjs/slush-cooking-react" target="_blank">react</a> - &#x57FA;&#x7840;&#x7684; react &#x9879;&#x76EE;&#x7684;&#x811A;&#x624B;&#x67B6;</li>
 <li><a href="https://github.com/cookingjs/slush-cooking-static" target="_blank">static</a> - &#x57FA;&#x7840;&#x9875;&#x9762;&#x9879;&#x76EE;</li>
 </ul>
