--- a/zh-cn/cli.html
+++ b/zh-cn/cli.html
@@ -65,7 +65,7 @@
         data-chapter-title="CLI"
         data-filepath="cli.md"
         data-basepath="."
-        data-revision="Tue Sep 13 2016 18:54:39 GMT+0800 (CST)"
+        data-revision="Sun Sep 18 2016 11:52:34 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -440,7 +440,7 @@ $ cooking init vue
 <ul>
 <li>-c --config <configfile></configfile></li>
 </ul>
-<p>&#x9ED8;&#x8BA4;&#x8BFB;&#x53D6; <code>cooking.conf.js</code> &#x914D;&#x7F6E;&#x4E5F;&#x6307;&#x5B9A;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
+<p>&#x9ED8;&#x8BA4;&#x8BFB;&#x53D6; <code>cooking.conf.js</code> &#x914D;&#x7F6E;&#xFF0C;&#x4E5F;&#x53EF;&#x6307;&#x5B9A;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
 <pre><code class="lang-bash">$ cooking watch -c webpack.config.js
 </code></pre>
 <p>&#x63A5;&#x53D7;&#x4F20;&#x5165;&#x6587;&#x4EF6;&#x6570;&#x7EC4;&#xFF0C;&#x7528;&#x9017;&#x53F7;&#x5206;&#x9694;</p>
@@ -453,7 +453,7 @@ $ cooking init vue
 <ul>
 <li>-c --config <configfile></configfile></li>
 </ul>
-<p>&#x9ED8;&#x8BA4;&#x8BFB;&#x53D6; <code>cooking.conf.js</code> &#x914D;&#x7F6E;&#x4E5F;&#x6307;&#x5B9A;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
+<p>&#x9ED8;&#x8BA4;&#x8BFB;&#x53D6; <code>cooking.conf.js</code> &#x914D;&#x7F6E;&#xFF0C;&#x4E5F;&#x53EF;&#x6307;&#x5B9A;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
 <pre><code class="lang-bash">$ cooking build -c webpack.config.js
 </code></pre>
 <p>&#x63A5;&#x53D7;&#x4F20;&#x5165;&#x6587;&#x4EF6;&#x6570;&#x7EC4;&#xFF0C;&#x7528;&#x9017;&#x53F7;&#x5206;&#x9694;</p>
