--- a/zh-cn/intro.html
+++ b/zh-cn/intro.html
@@ -65,7 +65,7 @@
         data-chapter-title="五分钟上手"
         data-filepath="intro.md"
         data-basepath="."
-        data-revision="Tue Sep 13 2016 18:54:39 GMT+0800 (CST)"
+        data-revision="Sun Sep 18 2016 11:52:34 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -391,7 +391,7 @@
 <h2 id="&#x7B80;&#x5355;&#x4E0A;&#x624B;">&#x7B80;&#x5355;&#x4E0A;&#x624B;</h2>
 <h3 id="cookingcli">cooking-cli</h3>
 <blockquote>
-<p>&#x4E00;&#x4E2A;&#x57FA;&#x4E8E; webapck 2 &#x7684;&#x5168;&#x5C40;&#x5B89;&#x88C5;&#x7684;&#x547D;&#x4EE4;&#x884C;&#x5DE5;&#x5177;&#xFF0C;&#x5168;&#x5C40;&#x5B89;&#x88C5;&#x4F9D;&#x8D56;&#xFF0C;&#x53EF;&#x4EE5;&#x7701;&#x53BB;&#x5728;&#x6BCF;&#x4E2A;&#x9879;&#x76EE;&#x91CC;&#x5B89;&#x88C5;&#x5F00;&#x53D1;&#x4F9D;&#x8D56;&#x7684;
+<p>&#x4E00;&#x4E2A;&#x57FA;&#x4E8E; webpack 2 &#x7684;&#x5168;&#x5C40;&#x5B89;&#x88C5;&#x7684;&#x547D;&#x4EE4;&#x884C;&#x5DE5;&#x5177;&#xFF0C;&#x5168;&#x5C40;&#x5B89;&#x88C5;&#x4F9D;&#x8D56;&#xFF0C;&#x53EF;&#x4EE5;&#x7701;&#x53BB;&#x5728;&#x6BCF;&#x4E2A;&#x9879;&#x76EE;&#x91CC;&#x5B89;&#x88C5;&#x5F00;&#x53D1;&#x4F9D;&#x8D56;&#x7684;
 &#x9EBB;&#x70E6;&#xFF1B;&#x540C;&#x65F6;&#x8FD8;&#x5305;&#x542B;&#x811A;&#x624B;&#x67B6;&#x3001;&#x63D2;&#x4EF6;&#x7BA1;&#x7406;&#x7B49;&#x529F;&#x80FD;&#x3002;</p>
 </blockquote>
 <p><strong>&#x9996;&#x5148;&#x786E;&#x4FDD;&#x662F;&#x5728; <code>NPM 3+</code>, <code>Node 4+</code>, <code>Python 2.7+</code> &#x73AF;&#x5883;&#x4E0B;&#x8FD0;&#x884C;</strong></p>
