--- a/zh-cn/test.html
+++ b/zh-cn/test.html
@@ -63,7 +63,7 @@
         data-chapter-title="如何写测试"
         data-filepath="test.md"
         data-basepath="."
-        data-revision="Tue Sep 13 2016 18:54:39 GMT+0800 (CST)"
+        data-revision="Sun Sep 18 2016 11:52:34 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -395,7 +395,7 @@ cooking test
 <h2 id="&#x4F8B;&#x5B50;">&#x4F8B;&#x5B50;</h2>
 <p>&#x8FD9;&#x91CC;&#x4EE5; karma &#x7684;&#x4F7F;&#x7528;&#x4E3E;&#x4F8B;&#x3002;&#x9996;&#x5148;&#x5B89;&#x88C5; <code>cooking-karma</code> &#x63D2;&#x4EF6;&#xFF0C;&#x5F53;&#x7136;&#x5185;&#x7F6E;&#x7684;&#x4F9D;&#x8D56;&#x5E76;&#x4E0D;&#x4E00;&#x5B9A;&#x6EE1;&#x8DB3;&#x4F60;&#x7684;&#x6240;&#x6709;&#x9700;&#x6C42;&#xFF0C;&#x6CA1;&#x6709;&#x63D0;&#x4F9B;&#x7684;&#x9700;&#x8981;&#x4F60;&#x81EA;&#x5DF1;&#x624B;&#x52A8;&#x5B89;&#x88C5;&#x3002;</p>
 <h3 id="&#x5199;-karma-&#x6D4B;&#x8BD5;">&#x5199; karma &#x6D4B;&#x8BD5;</h3>
-<p>&#x5982;&#x679C;&#x4F60;&#x719F;&#x6089; karma &#x7684;&#x547D;&#x4EE4;&#x884C;&#x4F7F;&#x7528;&#x65B9;&#x5F0F;&#x7684;&#x8BDD;&#xFF0C;&#x4F1A;&#x77E5;&#x9053;&#x53EF;&#x4EE5;&#x901A;&#x8FC7;&#x6267;&#x884C; init &#x7684;&#x6307;&#x4EE4;&#x521B;&#x5EFA;&#x914D;&#x7F6E;&#x6587;&#x4EF6;&#xFF0C;&#x5F53;&#x7136;&#x4F60;&#x53EF;&#x4EE5;&#x901A;&#x8FC7; cooking &#x7684;&#x811A;&#x624B;&#x67B6;&#x63D0;&#x4F9B;&#x7684;&#x914D;&#x7F6E;&#x6587;&#x4EF6;&#x3002;</p>
+<p>&#x5982;&#x679C;&#x4F60;&#x719F;&#x6089; karma &#x7684;&#x547D;&#x4EE4;&#x884C;&#x4F7F;&#x7528;&#x65B9;&#x5F0F;&#x7684;&#x8BDD;&#xFF0C;&#x4F1A;&#x77E5;&#x9053;&#x53EF;&#x4EE5;&#x901A;&#x8FC7;&#x6267;&#x884C; init &#x7684;&#x6307;&#x4EE4;&#x521B;&#x5EFA;&#x914D;&#x7F6E;&#x6587;&#x4EF6;&#xFF0C;&#x5F53;&#x7136;&#x4F60;&#x53EF;&#x4EE5;&#x4F7F;&#x7528; cooking &#x7684;&#x811A;&#x624B;&#x67B6;&#x63D0;&#x4F9B;&#x7684;&#x914D;&#x7F6E;&#x6587;&#x4EF6;&#x3002;</p>
 <pre><code class="lang-shell">cooking test karma init
 </code></pre>
 <h3 id="&#x8FD0;&#x884C;&#x6D4B;&#x8BD5;">&#x8FD0;&#x884C;&#x6D4B;&#x8BD5;</h3>
