--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -63,7 +63,7 @@
         data-chapter-title="cooking"
         data-filepath="README.md"
         data-basepath="."
-        data-revision="Sun Sep 18 2016 11:52:34 GMT+0800 (CST)"
+        data-revision="Sun Sep 18 2016 11:56:52 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -378,7 +378,7 @@
 </blockquote>
 <ul>
 <li>&#x5F00;&#x59CB;<ul>
-<li><a href="intro.html">&#x4ECB;&#x7ECD;</a></li>
+<li><a href="intro.html">&#x4E94;&#x5206;&#x949F;&#x4E0A;&#x624B;</a></li>
 <li><a href="example.html">&#x4F8B;&#x5B50;</a></li>
 </ul>
 </li>
