--- a/zh-cn/list-of-plugins.html
+++ b/zh-cn/list-of-plugins.html
@@ -65,7 +65,7 @@
         data-chapter-title="插件"
         data-filepath="list-of-plugins.md"
         data-basepath="."
-        data-revision="Mon Sep 19 2016 16:55:59 GMT+0800 (CST)"
+        data-revision="Mon Sep 19 2016 18:53:47 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -376,8 +376,10 @@
                     
                         <h1 id="&#x63D2;&#x4EF6;">&#x63D2;&#x4EF6;</h1>
 <p>&#x5347;&#x7EA7;&#x63D2;&#x4EF6;&#x7684;&#x65B9;&#x5F0F;</p>
-<pre><code class="lang-shell">cooking remove vue
-cooking import vue
+<pre><code class="lang-shell">cooking update vue
+</code></pre>
+<p>&#x6216;&#x8005;</p>
+<pre><code class="lang-shell">cooking remove vue &amp;&amp; cooking import vue
 </code></pre>
 <p>&#x901A;&#x8FC7; <a href="configuration.html#extends">extends</a> &#x6211;&#x4EEC;&#x53EF;&#x4EE5;&#x5F15;&#x5165;&#x989D;&#x5916;&#x7684;&#x914D;&#x7F6E;&#x548C;&#x4F9D;&#x8D56;&#xFF0C;&#x76EE;&#x524D;&#x63D0;&#x4F9B;&#x7684;&#x63D2;&#x4EF6;&#x6709;&#xFF1A;</p>
 <ul>
