--- a/en/list-of-plugins.html
+++ b/en/list-of-plugins.html
@@ -65,7 +65,7 @@
         data-chapter-title="Plugins"
         data-filepath="list-of-plugins.md"
         data-basepath="."
-        data-revision="Mon Sep 19 2016 18:53:47 GMT+0800 (CST)"
+        data-revision="Thu Sep 22 2016 19:09:48 GMT+0800 (CST)"
         data-innerlanguage="en">
     
 
@@ -395,7 +395,7 @@
 <li><a href="https://github.com/cookingjs/cooking-sass" target="_blank">sass</a> - sass configuration</li>
 <li><a href="https://github.com/webjyh/cooking-less" target="_blank">less</a> - less configuration by <a href="https://github.com/webjyh" target="_blank">webjyh</a></li>
 <li><a href="https://github.com/cookingjs/cooking-postcss" target="_blank">postcss</a>(deprecated in 1.0) - postcss-loader with built-in cssnext</li>
-<li><a href="https://github.com/cookingjs/cooking-saladcss" target="_blank">saladcss</a>(deprecated in 1.0) - a more friendly CSS preprocessor plugin <a href="http://elemefe.github.io/postcss-salad" target="_blank">postcss-salad</a></li>
+<li><a href="https://github.com/cookingjs/cooking-saladcss" target="_blank">saladcss</a> - a more friendly CSS preprocessor plugin <a href="http://elemefe.github.io/postcss-salad" target="_blank">postcss-salad</a></li>
 </ul>
 <h2 id="test">Test</h2>
 <ul>
