--- a/zh-cn/list-of-plugins.html
+++ b/zh-cn/list-of-plugins.html
@@ -65,7 +65,7 @@
         data-chapter-title="插件"
         data-filepath="list-of-plugins.md"
         data-basepath="."
-        data-revision="Mon Sep 19 2016 18:53:47 GMT+0800 (CST)"
+        data-revision="Thu Sep 22 2016 19:09:49 GMT+0800 (CST)"
         data-innerlanguage="zh-cn">
     
 
@@ -395,7 +395,7 @@
 <li><a href="https://github.com/cookingjs/cooking-sass" target="_blank">sass</a> - sass &#x914D;&#x7F6E;</li>
 <li><a href="https://github.com/webjyh/cooking-less" target="_blank">less</a> - less &#x914D;&#x7F6E; by <a href="https://github.com/webjyh" target="_blank">webjyh</a></li>
 <li><a href="https://github.com/cookingjs/cooking-postcss" target="_blank">postcss</a>(1.0 &#x5F03;&#x7528;) - postcss-loader, &#x5185;&#x7F6E; cssnext &#x7B49;</li>
-<li><a href="https://github.com/cookingjs/cooking-saladcss" target="_blank">saladcss</a>(1.0 &#x5F03;&#x7528;) - &#x66F4;&#x597D;&#x7528;&#x7684; CSS &#x9884;&#x5904;&#x7406;&#x63D2;&#x4EF6; <a href="http://elemefe.github.io/postcss-salad" target="_blank">postcss-salad</a></li>
+<li><a href="https://github.com/cookingjs/cooking-saladcss" target="_blank">saladcss</a> - &#x66F4;&#x597D;&#x7528;&#x7684; CSS &#x9884;&#x5904;&#x7406;&#x63D2;&#x4EF6; <a href="http://elemefe.github.io/postcss-salad" target="_blank">postcss-salad</a></li>
 </ul>
 <h2 id="&#x6D4B;&#x8BD5;&#x76F8;&#x5173;">&#x6D4B;&#x8BD5;&#x76F8;&#x5173;</h2>
 <ul>
